[project]
name = "Livenodes-RealSense"
dynamic = ['version']
description = "LiveNodes: node based live streaming sensor/data and visualization suite."
authors = [
    { name = "Yale Hartmann", email = "yale.hartmann@uni-bremen.de" }
]
# TODO: figure out how/if to add livenodes here... for now install manually in venv via:
# pip install . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
# pip install -e . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
dependencies = [
    "livenodes>=0.9.1b1",
    "livenodes-core-nodes>=0.9.1b1",
    "PyQt5>=5.12.3",
    "numpy>=1.22.1",
    "opencv-python>=4.6.0.66",
    "pyrealsense2>=2.50.0.3812",
    "imageio",
    "imageio[ffmpeg]"
]

[project.entry-points."livenodes.nodes"]
in_realsense = "livenodes_realsense.in_realsense:In_realsense"
in_realsense_colorised = "livenodes_realsense.in_realsense_colorised:In_realsense_colorised"
draw_image_depth = "livenodes_realsense.draw_image_depth:Draw_image_depth"
draw_image_rgb = "livenodes_realsense.draw_image_rgb:Draw_image_rgb"
in_colorised = "livenodes_realsense.in_colorised:In_colorised"
out_colorised = "livenodes_realsense.out_colorised:Out_colorised"
playback_colorised = "livenodes_realsense.playback_colorised:Playback_colorised"

[project.optional-dependencies]
dev = [
    "tox",
    "pytest>=7.0.1"
]

[build-system]
requires = [
    "setuptools>=48",
    "wheel",
    "setuptools_scm >= 2.0.0, <3",
    "setuptools-git-versioning"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 140
target-version = ['py36']
skip-string-normalization = true