[project]
name = "Livenodes-RealSense"
dynamic = ['version']
description = "LiveNodes: node based live streaming sensor/data and visualization suite."
authors = [
    { name = "Yale Hartmann", email = "yale.hartmann@uni-bremen.de" }
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "livenodes>=0.9.1",
    "livenodes-core-nodes>=0.9.1",
    "PyQt5>=5.12.3",
    "numpy>=1.22.1",
    "opencv-python-headless>=4.6.0.66",
    "pyrealsense2>=2.50.0.3812",
    "imageio",
    "imageio[ffmpeg]",
]

[project.entry-points."livenodes.nodes"]
in_realsense = "livenodes_realsense.in_realsense:In_realsense"
in_realsense_colorised = "livenodes_realsense.in_realsense_colorised:In_realsense_colorised"
draw_image_depth = "livenodes_realsense.draw_image_depth:Draw_image_depth"
draw_image_rgb = "livenodes_realsense.draw_image_rgb:Draw_image_rgb"
in_colorised = "livenodes_realsense.in_colorised:In_colorised"
out_colorised = "livenodes_realsense.out_colorised:Out_colorised"
playback_colorised = "livenodes_realsense.playback_colorised:Playback_colorised"

[project.optional-dependencies]
dev = [
    "tox",
    "pytest>=7.0.1"
]

[build-system]
requires = [
    "setuptools>=60",
    "wheel",
    "setuptools_scm >= 8.0.0",
    "setuptools-git-versioning"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 140
target-version = ['py36']
skip-string-normalization = true
